# manim-beamer

./: .gitignore  LICENSE  README.md  ageexample.py  conf.py  default_config.yaml  default_configuration.yaml  empiricalfuzzyset.py  fuzzyset.py  fuzzysetoperations.py  index.rst  pyproject.toml  remote_requirements.txt  requirements.txt  setup.py  studentExample.py  studentexample.py
_build/doctrees/: documentation.doctree  environment.pickle  index.doctree
_build/html/: .buildinfo  documentation.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
animations/: beamer.py  clip_demo.py  colors.py  common.py  custom_config.yml  ecm_demo.py  wm_demo.py
animations/beamer/: blocks.py  lists.py  slides.py
beamer/: __init__.py  blocks.py  lists.py
beamer/bib/: bibtex.py
examples/: example_block.py  references.bib  slide_with_blocks.py
mbeamer/: blocks.py  images.py  setup.py  slides.py
src/manim_beamer/: blocks.py  slides.py
tests/computing/: big_train_data.pt  big_val_data.pt  small_data.pt  test_graph.py  test_self_organize.py
tests/fuzzy/: test_sets.py  test_tnorms.py
tests/rough/: README.md  core.py  sets.py  test_core.py  test_decision_table.py  test_definable.py  test_dependency.py  test_discernibility.py  test_knowledge.py  test_knowledge_representation_system.py  test_relations.py  test_sets.py
unit_tests_for_r/: test_dchaos.py  test_frbs.py  test_rough_set_metrics.py
utilities/: functions.py  performance.py  reproducibility.py
utils/: functions.py  performance.py  reproducibility.py
(+59 files in other folders)
